# fastapi-reactjs-app

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/app/: .dockerignore  .pylintrc  Dockerfile  main.py  pyproject.toml
backend/app/src/app/clients/: joke_client.py
backend/app/src/app/core/: bootstrap.py  config.py
backend/app/src/app/db/: init.py  schema.sql  session.py
backend/app/src/app/domain/: joke.py
backend/app/src/app/repositories/: base.py  memory.py  postgres.py
backend/app/src/app/routers/: joke_router.py
backend/app/src/app/services/: joke_service.py
deploy/render/: Dockerfile  nginx.conf  supervisord.conf
docs/: ARCHITECTURE_REFERENCE.md  README.md  SYSTEM_TOPOLOGY.md
frontend/app/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/app/src/: App.jsx  main.jsx
frontend/app/src/components/: Footer.jsx  Header.jsx  JokeCard.jsx  SavedJokeCard.jsx
frontend/app/src/config/: api.js
frontend/app/src/pages/: HomePage.jsx  (+1 more)
infrastructure/: .gitignore  README.md
infrastructure/environments/local/: local-plan.sh  main.tf  outputs.tf  tflocal.sh  variables.tf
infrastructure/environments/prod/: backend.tf  main.tf  outputs.tf  variables.tf
infrastructure/environments/staging/: backend.tf  main.tf  outputs.tf  variables.tf
infrastructure/modules/alb/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecr/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecs_service/: main.tf  outputs.tf  variables.tf
infrastructure/modules/vpc/: main.tf  variables.tf
(+4 files in other folders)
